# wordle-sim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
data/: training.txt
docs/: design_doc.md
include/: dictionary.h
include/engine/: utils.h  wordle_engine.h
include/simulator/: simulator.h
include/solver/: frequency_solver.h  random_solver.h  solver.h
src/: dictionary.cpp  main.cpp  wordle.cpp
src/engine/: utils.cpp  wordle_engine.cpp
src/simulator/: simulator.cpp
src/solver/: frequency_solver.cpp  random_solver.cpp
tests/: test_wordle_engine.cpp
